crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-22.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/github/ecklf/rust-at-home/releases/all\")"
---
Some(
    Route {
        kind: Dynamic,
        module_file: "api/github/[owner]/[name]/releases/all.rs",
        module_name: Ident(
            api_github__owner___name__releases_all,
        ),
        path: "api/github/[owner]/[name]/releases/all",
        segments: Some(
            [
                "api",
                "github",
                "[owner]",
                "[name]",
                "releases",
                "all",
            ],
        ),
    },
)
