crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-23.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/github/ecklf/rust-at-home/tags/v0.1.0\")"
---
Some(
    Route {
        kind: CatchAll,
        module_file: "api/[...id].rs",
        module_name: Ident(
            api_____id_,
        ),
        path: "api/[...id]",
        segments: Some(
            [
                "api",
                "[...id]",
            ],
        ),
    },
)
