crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-3.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/posts/[id]\")"
---
Some(
    Route {
        kind: Dynamic,
        module_file: "api/posts/[id].rs",
        module_name: Ident {
            sym: api_posts__id_,
        },
        path: "api/posts/[id]",
        segments: Some(
            [
                "api",
                "posts",
                "[id]",
            ],
        ),
    },
)
