crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-5.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/root/catch/all/route\")"
---
Some(
    Route {
        kind: CatchAll,
        module_file: "api/[...id].rs",
        module_name: Ident(
            api_____id_,
        ),
        path: "api/[...id]",
        segments: Some(
            [
                "api",
                "[...id]",
            ],
        ),
    },
)
