crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-6.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/nested/posts\")"
---
Some(
    Route {
        kind: Static,
        module_file: "api/nested/posts.rs",
        module_name: Ident(
            api_nested_posts,
        ),
        path: "api/nested/posts",
        segments: None,
    },
)
