crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-7.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/nested/[id]\")"
---
Some(
    Route {
        kind: Dynamic,
        module_file: "api/nested/[id].rs",
        module_name: Ident(
            api_nested__id_,
        ),
        path: "api/nested/[id]",
        segments: Some(
            [
                "api",
                "nested",
                "[id]",
            ],
        ),
    },
)
