crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-8.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/nested/posts/[id]\")"
---
Some(
    Route {
        kind: Dynamic,
        module_file: "api/nested/posts/[id].rs",
        module_name: Ident {
            sym: api_nested_posts__id_,
        },
        path: "api/nested/posts/[id]",
        segments: Some(
            [
                "api",
                "nested",
                "posts",
                "[id]",
            ],
        ),
    },
)
