crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-9.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/nested\")"
---
Some(
    Route {
        kind: Dynamic,
        module_file: "api/[id].rs",
        module_name: Ident {
            sym: api__id_,
        },
        path: "api/[id]",
        segments: Some(
            [
                "api",
                "[id]",
            ],
        ),
    },
)
