crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/posts\")"
---
Some(
    Route {
        kind: Static,
        module_file: "api/posts.rs",
        module_name: Ident(
            api_posts,
        ),
        path: "api/posts",
        segments: None,
    },
)
